load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_proto//proto:defs.bzl", "proto_library")
npm_link_all_packages(name = "node_modules")

# see [https://github.com/aspect-build/rules_ts/tree/main/examples]
gazel_srcs = ["gazel.proto"]
logging_srcs = ["logging.proto"]
# Define the proto library
proto_library(
    name = "gazel_proto",
    srcs = gazel_srcs,
    visibility = ["//visibility:public"],
    deps = [
       "@com_google_protobuf//:any_proto",
       "@com_google_protobuf//:timestamp_proto",
        
    ],
)
proto_library(
    name = "logging_proto",
    srcs = logging_srcs,
    visibility = ["//visibility:public"],
    deps = [
       "@com_google_protobuf//:any_proto",
       "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "gazel_ts_proto",
    node_modules = ":node_modules",
    proto = ":gazel_proto",
    proto_srcs = gazel_srcs,
    # See https://github.com/connectrpc/connect-es/blob/main/MIGRATING.md#update-plugin-options
 #   protoc_gen_options = {"import_extension": "js"},
    visibility = ["//visibility:public"],
#    deps = ["//examples/connect_node/proto"],
)

ts_proto_library(
    name = "logging_ts_proto",
    node_modules = ":node_modules",
    proto = ":logging_proto",
    proto_srcs = logging_srcs,
    # See https://github.com/connectrpc/connect-es/blob/main/MIGRATING.md#update-plugin-options
 #   protoc_gen_options = {"import_extension": "js"},
    visibility = ["//visibility:public"],
#    deps = ["//examples/connect_node/proto"],
)

ts_project(
    name = "index",
    srcs = ["index.ts"],
    data = [
        "package.json",  # for type=module
    ],
    deps = [
        ":logging_ts_proto",
        ":gazel_ts_proto",
    ],
      tsconfig = {
        "compilerOptions": {
              "module": "ES2022",
              "moduleResolution": "node",
              "lib": ["ES2022", "dom"],
        
        },
    },
    visibility = ["//visibility:public"],
)
