# Shell script targets - simple targets that will succeed
# Note: sh_binary and sh_test are built-in Bazel rules

# Simple hello world script
sh_binary(
    name = "hello",
    srcs = ["hello.sh"],
    visibility = ["//visibility:public"],
)

# Data processing script with arguments
sh_binary(
    name = "process_data",
    srcs = ["process_data.sh"],
    args = [
        "input.txt",
        "output.txt",
    ],
    visibility = ["//visibility:public"],
)

# A simple genrule that creates a file
genrule(
    name = "generate_config",
    outs = ["config.txt"],
    cmd = """
        echo "# Generated Configuration" > $@
        echo "timestamp=$$(date +%s)" >> $@
        echo "version=1.0.0" >> $@
        echo "status=ready" >> $@
    """,
    visibility = ["//visibility:public"],
)

# A filegroup to collect scripts
filegroup(
    name = "scripts",
    srcs = [
        "hello.sh",
        "process_data.sh",
    ],
    visibility = ["//visibility:public"],
)

# A test target using shell
sh_test(
    name = "hello_test",
    srcs = ["hello.sh"],
    size = "small",
)

# Python binary target
py_binary(
    name = "analyzer",
    srcs = ["analyzer.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
)
